--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,16 @@
-h1 {
-    color: #d87676;
+body {
+    margin: 0;
+    background-color: #ff1e00;
+    display: flex;
+}
+
+header {
+    background-color: black;
+    width: 100%;
+    
+}
+
+.logo {
+    width: 100px;
+    height: 75px;
 }
